--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,11 @@
-.Remove save command - all changes to the password 
-records in the file should be immediately saved.
-
 .Separate the keepass console from the libkeepass 
  (different repositories). libkeepass should have 
- unit tests. The console is a demo app not a 
- test harness! 
+ unit tests.
+
+.Incorporate botan dependency in the CMake project 
+ file.
+
+. Decode the file payload.
+
+. Turn the keepass console into a Qt based GUI 
+  application written in C++
